--- a/style .css
+++ b/style .css
@@ -278,12 +278,13 @@ section{
 }
 
 .card{
-    background-color: white;
+    background-color:white;
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0,0, 0);
     width:110%;
     text-align: center;
     margin: 20px;
+    display: inline-block;
 }
 
 
@@ -304,13 +305,13 @@ p{
 
 .IMAGESS{
     width: 100%;
-    height: 40vh;
+    height: 4vh;
     background-size: cover;
     background: url(./images/sec-8-img-1.png) no-repeat;
     /* margin-left: 1em;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px; */
-    display: inline;
+    display:flex;
 }
 
 .information{
@@ -320,10 +321,7 @@ p{
    font-size: 10;
    padding: 150px;
    margin-top: 0px;
-   background:url(./images/h-bg.png)no-repeat;
-   
 } 
-
 .HH{
     text-align: center;
     padding:1.5rem;
