--- a/about.css
+++ b/about.css
@@ -1,3 +1,10 @@
+.about{
+    background-image: url(./sary/iOS\ 7\ _\ \ 30\ nouveaux\ fonds\ d’écran\ \(à\ télécharger\)\,\ de\ nouvelles\ sonneries\ et\ alertes\ à\ découvrir\ ici.jfif) ;
+    background-size: cover;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
 
 .têtê h1{
     text-align: center;
